--- a/Fall23/Fall23Suraj/force-app/main/default/lwc/fall23ChildComponent/fall23ChildComponent.html
+++ b/Fall23/Fall23Suraj/force-app/main/default/lwc/fall23ChildComponent/fall23ChildComponent.html
@@ -2,11 +2,16 @@
     <lightning-card title="Child Component">
         TRACK: {valueFromTrack} <br/>
         API: {valueFromApi}
-
-
+        <br/>
         <lightning-button variant="brand" 
             label="Change Track Value" title="Primary action" 
             onclick={handleClick} class="slds-m-left_x-small"
+        ></lightning-button>
+
+        <lightning-button 
+            variant="brand" 
+            label="Like/Dislike" title="Primary action" 
+            onclick={handleLikeDislikeClick} class="slds-m-left_x-small"
         ></lightning-button>
 
     </lightning-card>
